--- a/index.html
+++ b/index.html
@@ -8,35 +8,23 @@
 </head>
 <body>
 	<div class="container">
-		<h2>Заказ бота</h2>
+		<h2>Anna_Nekhaeva</h2>
 		<div class="inner" id="main">
 			<div class="item">
 				<img src="bot.jpg" alt="" class="img">
-				<br>БОТ от 50 000₽</br>
+				<br>Написать в телеграм</br>
 				<button class="btn" id="btn1"></button>
 			</div>
 			<div class="item">
 				<img src="konsultacii.jpg" alt="" class="img">
-				<br>Консультация 0₽</br>
+				<br>Написать в ватсап</br>
 				<button class="btn" id="btn2"></button>
 			</div>
-		</div>
-		<div class="inner" id="form">
-			<h3>Форма обратной связи:</h3>
-			<div class="item">
-				<ul><input type="text" placeholder="Имя" id="username" class="input"></ul>
-				<ul><input type="text" placeholder="Email" id="user_email" class="input"></ul>
-				<ul><input type="text" placeholder="Телефон" id="user_phone" class="input"></ul>
-				<ul><input type="text" placeholder="Комментарий" id="comment" class="input"></ul>
-				<div id="error"></div>
-				<ul><button id="order">Отправить</button></ul>
-			</div>
-			<div class="item"></div>
 		</div>
 	</div>
 	<div class="usercard" id="usercard">
 		<h4>
-          		<a href="https://t.me/BotMaster_Alex_A">@BotMaster_Alex_A</a>
+          		<a href="https://t.me/Nekhaeva_make_up_beauty">Anna_Nekhaeva</a>
       		</h4>
 	</div>
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
