--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	</div>
 	<div class="usercard" id="usercard">
 		<h4>
-          		<a href="https://t.me/Nekhaeva_make_up_beauty">Anna_Nekhaeva</a>
+          		<a href="https://t.me/nekhaeva_make_up">Anna_Nekhaeva</a>
       		</h4>
 	</div>
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
