--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 				<button class="btn" id="btn1"></button>
 			</div>
 			<div class="item">
-				<br>Написать в ватсап</br>
-				<button class="btn" id="btn2"></button>
+				<p>Написать в ватсап
+					<button class="btn" id="btn2"></button>
+				</p>
 			</div>
 		</div>
 	</div>
