--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<h2>Anna_Nekhaeva</h2>
-		<div class="inner" id="main">
+		<div class="inner">
 			<div class="item">
 				<br>Написать в телеграм</br>
 				<button class="btn" id="btn1"></button>
