--- a/index.html
+++ b/index.html
@@ -11,12 +11,21 @@
 		<h2>Anna_Nekhaeva</h2>
 		<div class="inner">
 			<div class="item">
-				<br>Написать в телеграм</br>
-				<button class="btn" id="btn1"></button>
+				<p>
+					<button class="btn" id="btn1"></button>
+					Написать в телеграм
+				</p>
 			</div>
 			<div class="item">
-				<p>Написать в ватсап
+				<p>
 					<button class="btn" id="btn2"></button>
+					Написать в ватсап
+				</p>
+			</div>
+			<div class="item">
+				<p>
+					<button class="btn" id="btn3"></button>
+					Написать в директ
 				</p>
 			</div>
 		</div>
