--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 		<div class="inner">
 			<div class="item">
 				<p>
-					<button class="btn" id="btn1"></button>
-					Написать в телеграм
+					<a href="https://t.me/nekhaeva_make_up_beauty">
+						<button class="btn" id="btn1"></button>
+						Написать в телеграм
+					</a>
 				</p>
 			</div>
 			<div class="item">
