--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 			</div>
 			<div class="item">
 				<p>
-					<button class="btn" id="btn2"></button>
-					Написать в ватсап
+					<a href="https://wa.me/79259993620">
+						<button class="btn" id="btn2"></button>
+						Написать в ватсап
+					</a>
 				</p>
 			</div>
 			<div class="item">
