--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
 			</div>
 			<div class="item">
 				<p>
-					<button class="btn" id="btn3"></button>
-					Написать в директ
+					<a href="https://ig.me/m/alexandr_a_beznomerov">
+						<button class="btn" id="btn3"></button>
+						Написать в директ
+					</a>
 				</p>
 			</div>
 		</div>
