--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</div>
 			<div class="item">
 				<p>
-					<a href="https://wa.me/79259993620?text=%D0%90%D0%BD%D0%BD%D0%B0%2C%20%D0%BF%D1%80%D0%B8%D0%B2%D0%B5%D1%82!%20%F0%9F%91%8B%20...">
+					<a href="https://wa.me/79259993620?text=%D0%90%D0%BD%D0%BD%D0%B0%2C%20%D0%BF%D1%80%D0%B8%D0%B2%D0%B5%D1%82!%20...">
 						<button class="btn" id="btn2"></button>
 						Написать в ватсап
 					</a>
