--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<h2>Anna_Nekhaeva</h2>
 		<div class="inner">
 			<div class="item">
+			</div>
+			<div class="item">
 				<p>
 					<a href="https://t.me/nekhaeva_make_up_beauty">
 						<button class="btn" id="btn1"></button>
