--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</div>
 			<div class="item">
 				<p>
-					<a href="https://www.instagram.com/direct/t/116402526418720">
+					<a href="https://www.instagram.com/m/116402526418720">
 						<button class="btn" id="btn3"></button>
 						Написать в директ
 					</a>
