--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</div>
 			<div class="item">
 				<p>
-					<a href="ig.me/m/nekhaeva_make_up">
+					<a href="http://ig.me/m/nekhaeva_make_up">
 						<button class="btn" id="btn3"></button>
 						Написать в директ
 					</a>
