--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
           		<a href="https://t.me/nekhaeva_make_up">@Anna_Nekhaeva</a>
       		</h4>
 	</div>
+	<script src="app.js"></script>
 </body>
 </html>
