--- a/index.html
+++ b/index.html
@@ -14,20 +14,27 @@
 				<p>
 					<a href="https://t.me/nekhaeva_make_up_beauty">
 						<button class="btn" id="btn1"></button>
-						Написать в телеграм
+						Перейти в чат Telegram
 					</a>
 				</p>
 			</div>
 			<div class="item">
 				<p>
 					<button class="btn" id="btn2"></button>
-					Написать в ватсап
+					Написать в WhatsApp
 				</p>
 			</div>
 			<div class="item">
 				<p>
-					<button class="btn" id="btn3"></button>
-					Написать в директ
+					<a href="https://t.me/nekhaeva_make_up">
+						<button class="btn" id="btnclose"></button>
+						Написать в Telegram
+					</a>
+				</p>
+			</div>
+			<div class="item">
+				<p>
+					<button class="btnclose" id="btnclose"></button>
 				</p>
 			</div>
 		</div>
