--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="item">
 				<p>
 					<a href="https://t.me/nekhaeva_make_up">
-						<button class="btn" id="btnclose"></button>
+						<button class="btn" id="btn3"></button>
 						Написать в Telegram
 					</a>
 				</p>
