--- a/index.html
+++ b/index.html
@@ -34,15 +34,11 @@
 					</a>
 				</p>
 			</div>
-			<div class="item">
-				<p>
-					<button class="btnclose" id="btnclose"></button>
-				</p>
-			</div>
 		</div>
 	</div>
 	<div class="usercard" id="usercard">
 		<h4>
+			<p><button class="btnclose" id="btnclose"></button></p>
           		<a href="https://t.me/nekhaeva_make_up">@Anna_Nekhaeva</a>
       		</h4>
 	</div>
