--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div class="item">
 				<p>
 					<a href="https://t.me/nekhaeva_make_up_beauty">
-						<button class="btn" id="btn1"></button>
+						<button id="btn1"></button>
 						Перейти в чат Telegram
 					</a>
 				</p>
