--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
 </head>
 <body>
 	<div class="container">
-		<h2>Anna_Nekhaeva</h2>
-		<p>
-			<a href="https://t.me/nekhaeva_make_up_beauty">
-				<button id="btn1"></button>
-			</a>
+		<h2>Anna_Nekhaeva</h2><a href="https://t.me/nekhaeva_make_up_beauty"><button id="btn1"></button>
 		</p>
 		<div class="inner">
 			<div class="item">
