--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="usercard" id="usercard">
 		<h4>
 			<p><button class="btnclose" id="btnclose"></button></p>
-          		<a href="https://ig.me/nekhaeva_make_up">@Anna_Nekhaeva</a>
+          		<a href="https://www.instagram.com/nekhaeva_make_up">@Anna_Nekhaeva</a>
       		</h4>
 	</div>
 	<script src="app.js"></script>
